# Banette

./: .gitignore  Banette.uplugin  README.md
.github/: dependabot.yml
Source/Banette/: Banette.Build.cs  Banette.cpp  Banette.h  BanetteModule.cpp  BanetteModule.h  Definition.h
Source/Banette/Core/: BanetteError.h  BanetteLayer.h  BanetteService.h  Error.h  Layer.h  Service.h
Source/Banette/Pipeline/: BanetteServiceBuilder.h  ServiceBuilder.h  ServiceProvider.h
Source/BanetteCore/: BanetteCore.Build.cs  BanetteCore.cpp  BanetteCore.h
Source/BanetteCore/Concepts/: BanetteLayer.h  BanetteService.h
Source/BanetteGenerator/: BanetteGenerator.Build.cs  BanetteGenerator.cpp  BanetteGenerator.h
Source/BanetteGenerator/Blueprint/: BanetteGeneratorLibrary.cpp  BanetteGeneratorLibrary.h
Source/BanetteGenerator/generator/: Cargo.toml  PreBuildSteps.bat  bindings.h  build.rs
Source/BanetteGenerator/generator/.run/: Generate SDK API.run.xml
Source/BanetteGenerator/generator/src/: lib.rs  main.rs
Source/BanetteGenerator/generator/src/filter/: http_request_builder.rs  is_required.rs  mod.rs  path_to_func_name.rs  response_body_schema.rs  tags_to_pipe_separated.rs  to_ue_type.rs
Source/BanetteGenerator/generator/src/openapi/: filter.rs  loader.rs  mod.rs  parser.rs
Source/BanetteGenerator/generator/src/openapi/filter/: http_request_builder.rs  http_request_params.rs  is_required.rs  mod.rs  path_to_func_name.rs  request_body_schema.rs  response_body_schema.rs  tags_to_pipe_separated.rs  to_ue_type.rs
Source/BanetteGenerator/generator/templates/: api.h.tera  openapi.h.tera
Source/BanetteKit/: BanetteKit.Build.cs  BanetteKit.cpp  BanetteKit.h
Source/BanetteKit/Layers/: ExtractLayer.h  HttpOriginLayer.h  InjectHeaderLayer.h  JsonLayer.h  RateLimitLayer.cpp  (+2 more)
Source/BanetteTest/: BanetteTest.Build.cs  BanetteTest.cpp  BanetteTest.h
Source/BanetteTransport/: BanetteTransport.Build.cs  BanetteTransport.cpp  BanetteTransport.h
(+12 files in other folders)
