[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cbindgen = "0.29.2"

[dependencies]
oas3 = { git = "https://github.com/tarnishablec/oas3-rs", branch = "copilot/fix-issue-278" }
serde_json = "1.0.145"
tera = "1.20.1"
ureq = "3.1.4"
anyhow = "*"
clap = { version = "4.5.53", features = ["derive"] }


[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/main.rs"

[lints.clippy]
