[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cbindgen = { git = "https://github.com/tarnishablec/cbindgen.git", branch = "copilot/add-namespace-attribute-support" }

[dependencies]
oas3 = { git = "https://github.com/tarnishablec/oas3-rs", branch = "copilot/fix-issue-278", features = ["yaml-spec"] }
serde_json = "1.0.145"
serde_yaml_bw = "2.5.1"
tera = "1.20.1"
ureq = "3.1.4"
anyhow = "1"
clap = { version = "4.5.53", features = ["derive"] }
cbindgen-macro = { git = "https://github.com/tarnishablec/cbindgen.git", branch = "copilot/add-namespace-attribute-support" }

[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/main.rs"

[lints.clippy]
